2006-06-16  Roland McGrath  <roland@redhat.com>

	* lket/b2a/Makefile.in: Regenerated with automake-1.9.6-2.

2006-06-09  Li Guanglei <guanglei@cn.ibm.com>

	* lket/b2a/lket_b2a.c, lket/b2a/lket_b2a.h: Rewrite
	according to the latest LKET's tapsets. Make it able
	to read the metainfo wrote by tapsets.

2006-06-02  Li Guanglei <guanglei@cn.ibm.com>

	* lket/b2a/lket_b2a.c: eliminate some compile warnings

2006-06-01  Li Guanglei <guanglei@cn.ibm.com>

	* lket/b2a/lket_b2a.h, lket/b2a/lket_b2a.c: make it able to
	read user added trace data and backtrace

2006-05-30  Martin Hunt  <hunt@redhat.com>

	* string.c (_stp_text_str): New function.
	* string.h (_stp_text_str): Declare.

2006-05-25  Martin Hunt  <hunt@redhat.com>

	* vsprintf.c (_stp_vsnprintf): Change %p to work like
	libc and automatically insert "0x" before the pointer.

2006-05-24  Josh Stone  <joshua.i.stone@intel.com>

	PR 2677
	* sym.c (_stp_symbol_sprint_basic): New function that returns
	just the symbol name, and doesn't bother with String.

2006-05-24  Li Guanglei <guanglei@cn.ibm.com>
	* lket/b2a/Makefile.am, lket/b2a/Makefile.in,
	lket/b2a/README, lket/b2a/lket_b2a.c,
	lket/b2a/lket_b2a.h: a binary to ascii converter used
	to convert LKET's default binary trace data.

2006-05-09  Li Guanglei <guanglei@cn.ibm.com>
	PR 2647
	Patch given by Gui Jian <guij@cn.ibm.com>
	* vsprintf.c: %0s support to print null-terminated string

2006-05-03  Josh Stone  <joshua.i.stone@intel.com>

	* loc2c-runtime.h (deref_string): resolved gcc "warning:
	assignment makes integer from pointer without a cast" when
	using a pointer as the source address.

2006-04-28  Martin Hunt  <hunt@redhat.com>

	* vsprintf.c (_stp_vsnprintf): Fix argument size for %p.

2006-04-17  Martin Hunt  <hunt@redhat.com>

	* vsprintf.c (_stp_vsnprintf): Fix endian
	before writing binary.
	(_stp_endian): New variable to control endianess.

2006-04-11  Tom Zanussi  <zanussi@us.ibm.com>

	* print.c (_stp_print_flush): Change TIMESTAMP_SIZE to